--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                            <input id="phone-input-field" type="number" min="0" class="form-control text-center" value="1">
                            <button id="btn-phone-plus" class="btn btn-default"><i class="fas fa-plus"></i></button>
                         </div>
-                        <h5 >$ <span id="total-phone-price">1219</span> </h5>
+                        <h5 >$<span id="total-phone-price">1219</span> </h5>
                         <img src="images/remove.png" alt="" class="remove-item">
                      </div>
                   </div>
@@ -46,11 +46,11 @@
                      <div class="col-md-5 center-item">
                         <div class="input-group number-spinner">
                            <button id="btn-case-minus" class="btn btn-default"><i class="fas fa-minus"></i></button>
-                           <input id="case-number-field" type="number" min="0" class="form-control text-center" value="1">
+                           <input id="case-input-field" type="number" min="0" class="form-control text-center" value="1">
                            <button id="btn-case-plus" class="btn btn-default"><i class="fas fa-plus"></i></button>
 
                         </div>
-                        <h5 >$ <span id="case-price">59</span> </h5>
+                        <h5 >$<span id="case-price">59</span> </h5>
                         <img src="images/remove.png" alt="" class="remove-item">
                      </div>
                   </div>
@@ -79,9 +79,10 @@
          </div>
       </div>
    </section>
-   <script src="js/utility.js"></script>
+   <!-- <script src="js/utility.js"></script>
    <script src="js/case.js"></script>
-   <script src="js/phone.js"></script>
+   <script src="js/phone.js"></script> -->
+   <script src="js/practice.js"></script>
 </body>
 
 </html>
